--- a/app/src/main/res/layout/frag_login.xml
+++ b/app/src/main/res/layout/frag_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
     tools:context=".ui.fragments.auth.LoginFrag">
 
