--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -14,6 +14,15 @@
         android:layout_height="match_parent"
         tools:context=".ui.activity.ChatActivity">
 
+        <ProgressBar
+            android:visibility="gone"
+            android:id="@+id/imgLoading"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/chatAppBar"
             android:elevation="0dp"
@@ -110,10 +119,14 @@
                 android:layout_height="66dp">
 
                 <EditText
+                    android:background="@drawable/gridview_bg"
+                    android:fontFamily="@font/satoshi_medium"
+                    android:textColor="@color/title_text_color"
                     android:layout_gravity="center"
                     android:layout_weight="0.8"
                     android:id="@+id/edMessage"
-                    android:hint="Enter your message"
+                    android:textSize="16sp"
+                    android:hint="Enter your message..."
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
