--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -46,6 +46,17 @@
                         android:src="@drawable/ic_baseline_menu_24"
                         android:layout_width="0dp"
                         android:layout_height="30dp"/>
+                    <ImageView
+                        android:paddingVertical="18dp"
+                        android:paddingRight="110dp"
+                        android:layout_gravity="left"
+                        android:clipToOutline="true"
+                        android:src="@drawable/home_page_header"
+                        android:layout_weight="0.6"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"/>
+
+                    <!--
                     <TextView
                         android:layout_weight="0.6"
                         android:textSize="22sp"
@@ -55,6 +66,7 @@
                         android:gravity="center_vertical"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"/>
+                        -->
 
                     <ImageView
                         android:layout_gravity="center"
