--- a/app/src/main/res/layout/loading_screen.xml
+++ b/app/src/main/res/layout/loading_screen.xml
@@ -9,12 +9,13 @@
         android:layout_width="256dp"
         android:layout_height="128dp"
         android:gravity="center"
-        android:background="@color/white">
+        android:theme="@style/BottomSheetStyle">
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
         <TextView
+            android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="22sp"
