UserProfileFragment.kt setup done

--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -11,7 +11,7 @@
         android:id="@+id/customOrderItem"
         android:title="Custom Order"/>
     <item
-        android:icon="@drawable/ic_baseline_home_24"
+        android:icon="@drawable/user_icon"
         android:id="@+id/profileItem"
         android:title="Profile"/>
 </menu>
