--- a/app/src/main/res/layout/custom_spinner_layout.xml
+++ b/app/src/main/res/layout/custom_spinner_layout.xml
@@ -22,6 +22,7 @@
         android:background="@drawable/custome_spinner_item"
         android:id="@+id/spinner"
         android:layout_weight="3"
+        android:layout_marginVertical="4dp"
         />
 
 </LinearLayout>
