--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -7,7 +7,9 @@
         android:layout_height="match_parent"
         tools:context=".ui.activity.ProductDetailsActivity"
         android:animateLayoutChanges="true"
-    android:theme="@style/satoshiTypeface">
+        android:theme="@style/satoshiTypeface"
+        android:orientation="vertical">
+
 
     <FrameLayout
             android:layout_width="match_parent"
@@ -31,7 +33,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="end"
             android:gravity="center_vertical"
-            android:visibility="gone">
+            android:visibility="gone"
+            tools:visibility="visible">
 
 
             <TextView
@@ -55,11 +58,28 @@
 
         </FrameLayout>
 
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/ivProduct"
+        android:layout_width="180dp"
+        android:layout_height="240dp"
+        android:layout_gravity="center"
+
+        app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Chip"
+        android:background="@color/bg_color"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="16dp"
+        android:scaleType="centerCrop"
+        />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <com.factor.bouncy.BouncyNestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="128dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="24dp"
         android:animateLayoutChanges="true"
         android:isScrollContainer="true"
         >
@@ -72,19 +92,6 @@
             android:paddingHorizontal="12dp"
             android:layout_marginBottom="56dp"
             android:animateLayoutChanges="true">
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/ivProduct"
-                android:layout_width="180dp"
-                android:layout_height="240dp"
-                android:layout_gravity="center"
-
-                app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Chip"
-                android:background="@color/bg_color"
-                android:layout_marginTop="36dp"
-                android:layout_marginBottom="16dp"
-                android:scaleType="centerCrop"
-                />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvTitle"
@@ -265,5 +272,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_medium"/>
 
-</FrameLayout>
+    </FrameLayout>
+
+</LinearLayout>
 
