--- a/app/src/main/res/layout/bottom_sheet_menu.xml
+++ b/app/src/main/res/layout/bottom_sheet_menu.xml
@@ -64,6 +64,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/menuItemWishlist"
             android:clickable="true"
             android:foreground="?attr/selectableItemBackground"
             android:orientation="horizontal"
