--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -3,11 +3,11 @@
 
     <item
         android:id="@+id/homeItem"
-        android:icon="@drawable/ic_baseline_home_24"
+        android:icon="@drawable/home_icon"
         android:title="Home"
         />
     <item
-        android:icon="@drawable/ic_baseline_home_24"
+        android:icon="@drawable/icon_custom_banner"
         android:id="@+id/customOrderItem"
         android:title="Custom Order"/>
     <item
