--- a/app/src/main/res/layout/category_item_layout.xml
+++ b/app/src/main/res/layout/category_item_layout.xml
@@ -6,41 +6,30 @@
 
     </data>
 
-    <LinearLayout
+    <com.google.android.material.card.MaterialCardView
+        android:foreground="?attr/selectableItemBackground"
+        android:id="@+id/cardCategory"
+        android:clickable="true"
+        android:backgroundTint="@color/bg_color"
+        app:cardCornerRadius="8dp"
+        android:elevation="0dp"
+        app:cardElevation="0dp"
         android:padding="4dp"
         android:layout_margin="4dp"
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:gravity="center"
-            android:orientation="vertical"
-            android:clickable="true"
-            android:foreground="?attr/selectableItemBackground"
-            android:background="@drawable/ic_superellipse_60x60"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            >
-
-            <ImageView
-                android:id="@+id/imgCategory"
-                android:src="@drawable/no_photo"
-                android:layout_width="40dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_height="50dp"/>
-
-        </LinearLayout>
-
+        android:layout_height="wrap_content"
+        android:focusable="true">
         <TextView
-            android:layout_marginTop="4dp"
+            android:layout_marginVertical="6dp"
+            android:layout_marginHorizontal="10dp"
             android:id="@+id/txtCategoryName"
             android:fontFamily="@font/satoshi_medium"
             android:textColor="@color/text_normal_color"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:gravity="center"
             android:text="Poster"
-            android:layout_width="70dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-    </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 </layout>
