fetching categories name by id added in ProductAdapter.kt

--- a/app/src/main/res/layout/product_item_layout.xml
+++ b/app/src/main/res/layout/product_item_layout.xml
@@ -9,7 +9,9 @@
         android:id="@+id/productCard"
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground"
-        android:layout_margin="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="10dp"
         android:orientation="vertical"
         android:layout_width="146dp"
         android:layout_height="wrap_content"
