--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="128dp"
         android:gravity="center"
         android:text="Change Password"
         android:textColor="@color/title_text_color"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:layout_marginTop="128dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -25,12 +25,12 @@
         android:layout_marginTop="26dp"
         android:fontFamily="@font/satoshi_regular"
         android:text="We have sent an OTP for changing password request\n kindly check your emails"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-    <EditText
+    <!--<EditText
         android:background="@drawable/edittext_bg"
         android:paddingLeft="10dp"
         android:fontFamily="@font/satoshi_medium"
@@ -41,7 +41,8 @@
         android:layout_marginTop="20dp"
         android:hint="Password"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:layout_editor_absoluteX="32dp" />
+        tools:layout_editor_absoluteX="32dp"
+        tools:visibility="gone"/>
 
     <EditText
         android:background="@drawable/edittext_bg"
@@ -54,25 +55,80 @@
         android:layout_marginTop="20dp"
         android:hint="Confirm Password"
         app:layout_constraintTop_toBottomOf="@+id/etPassword"
-        tools:layout_editor_absoluteX="32dp" />
+        tools:layout_editor_absoluteX="32dp"
+        tools:visibility="gone"/>-->
 
-<!--    <EditText-->
-<!--        android:id="@+id/etOtp"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginHorizontal="32dp"-->
-<!--        android:layout_marginVertical="20dp"-->
-<!--        android:hint="OTP"-->
-<!--        android:inputType="number"-->
-<!--        android:maxLength="4"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"-->
-<!--        />-->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/etPasswordContainer"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="32dp"
+        app:passwordToggleEnabled="true"
+        android:layout_marginTop="16dp"
+        android:hint="Enter password"
+        app:counterEnabled="true"
+        app:counterMaxLength="16"
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/satoshi_regular"
+            android:inputType="textPassword"
+            android:maxLength="16"
+            android:textColor="@color/title_text"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/etConfirmPasswordContainer"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:passwordToggleEnabled="true"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginTop="8dp"
+        android:hint="Confirm password"
+        app:layout_constraintTop_toBottomOf="@+id/etPasswordContainer">
+
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etConfirmPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/satoshi_regular"
+            android:inputType="textPassword"
+            android:maxLength="16"
+            android:textColor="@color/title_text"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!--    <EditText-->
+    <!--        android:id="@+id/etOtp"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginHorizontal="32dp"-->
+    <!--        android:layout_marginVertical="20dp"-->
+    <!--        android:hint="OTP"-->
+    <!--        android:inputType="number"-->
+    <!--        android:maxLength="4"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"-->
+    <!--        />-->
 
     <RelativeLayout
         android:id="@+id/rootRelative"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword">
+        app:layout_constraintTop_toBottomOf="@+id/etConfirmPasswordContainer">
 
         <LinearLayout
             android:id="@+id/root_otp_layout"
@@ -135,15 +191,16 @@
         </LinearLayout>
 
     </RelativeLayout>
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnReset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
         android:background="@drawable/normal_button_bg"
         android:text="Confirm"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:layout_marginTop="36dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rootRelative" />
