--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -69,6 +69,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginBottom="16dp"
         android:scaleType="centerCrop"
+        android:transitionName="fullImage"
         />
 
     <FrameLayout
