--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -29,15 +29,32 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0">
 
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center">
 
-                <com.google.android.material.imageview.ShapeableImageView
-                    android:id="@+id/ivProfilePic"
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="16dp"
-                    android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/person_user" />
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:id="@+id/ivProfilePic"
+                        android:layout_width="200dp"
+                        android:layout_height="200dp"
+                        android:layout_margin="16dp"
+                        android:scaleType="centerCrop"
+                        app:srcCompat="@drawable/person_user"
+                        />
+
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:layout_width="200dp"
+                        android:layout_height="200dp"
+                        android:layout_gravity="center"
+                        android:scaleType="centerInside"
+                        app:srcCompat="@drawable/ic_baseline_edit_24"
+                        android:tint="@color/white"
+                        android:background="@drawable/profile_image_bg"
+                        android:backgroundTint="#55000000"
+                        />
+
+                </FrameLayout>
 
                 <TextView
                     android:layout_width="match_parent"
