--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="padding_medium">16dp</dimen>
     <dimen name="margin_high">24dp</dimen>
     <dimen name="very_low_radius">4dp</dimen>
+    <dimen name="custom_image_width">200dp</dimen>
+    <dimen name="custom_image_height">200dp</dimen>
 </resources>
