--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,38 +7,19 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent" />
 
-        <nl.joery.animatedbottombar.AnimatedBottomBar
-            android:id="@+id/bottomNavigationView"
-            app:layout_constraintTop_toBottomOf="@id/viewPager"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainerView2"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:background="@color/white"
-            app:abb_selectedTabType="text"
-            app:abb_indicatorColor="@color/title_text_color"
-            app:abb_indicatorAppearance="round"
-            app:abb_tabColor="@color/title_text_color"
-            app:abb_indicatorHeight="4dp"
-            app:abb_indicatorMargin="24dp"
-            app:abb_tabs="@menu/bottom_menu"
-            app:abb_animationInterpolator="@android:anim/overshoot_interpolator"
-            app:abb_selectedIndex="0" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="match_parent"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/home_nav_graph"
+             />
+    </FrameLayout>
 </layout>
