--- a/app/src/main/res/layout/activity_account_delete.xml
+++ b/app/src/main/res/layout/activity_account_delete.xml
@@ -1,100 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.activity.AccountDeleteActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/deleteAppBar"
+    <data>
+
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="@color/white"
-        android:elevation="0dp"
-        app:elevation="0dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".ui.activity.AccountDeleteActivity">
 
-        <LinearLayout
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/deleteAppBar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="1">
+            android:layout_height="56dp"
+            android:background="@color/white"
+            android:elevation="0dp"
+            app:elevation="0dp">
 
-            <ImageView
-                android:id="@+id/btnDeleteBack"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:layout_weight="0.2"
-                android:clickable="true"
-                android:foreground="?attr/selectableItemBackground"
-                android:src="@drawable/ic_baseline_arrow_back_ios_24"
-                app:tint="@color/title_text_color" />
-
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.6"
-                android:fontFamily="@font/satoshi_bold"
-                android:gravity="center"
-                android:text="Account Deletion"
-                android:textColor="@color/title_text_color"
-                android:textSize="22sp" />
+                android:orientation="horizontal"
+                android:weightSum="1">
+
+                <ImageView
+                    android:id="@+id/btnDeleteBack"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="0.2"
+                    android:clickable="true"
+                    android:foreground="?attr/selectableItemBackground"
+                    android:src="@drawable/ic_baseline_arrow_back_ios_24"
+                    app:tint="@color/title_text_color" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.6"
+                    android:fontFamily="@font/satoshi_bold"
+                    android:gravity="center"
+                    android:text="Account Deletion"
+                    android:textColor="@color/title_text_color"
+                    android:textSize="22sp" />
 
 
-        </LinearLayout>
+            </LinearLayout>
 
-    </com.google.android.material.appbar.AppBarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-
-            <ImageView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_gravity="center"
-                android:src="@drawable/delete_user" />
-
-            <TextView
-                android:fontFamily="@font/satoshi_medium"
-                android:layout_marginHorizontal="12dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="After deleting your account , you may not able to see your orders or any other data. as we will delete all the information about you from our servers.\n\nContact Us : rp18339@gmail.com\n\nAfter entering your password you can delete your account." />
-
-            <androidx.appcompat.widget.AppCompatEditText
-                android:paddingHorizontal="6dp"
-                android:paddingBottom="2dp"
-                android:fontFamily="@font/satoshi_medium"
-                android:hint="Enter your password..."
-                android:textSize="18sp"
-                android:layout_marginTop="12dp"
-                android:layout_marginHorizontal="12dp"
-                android:background="@drawable/edittext_bg"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="32dp"/>
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:text="Delete My Account"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:fontFamily="@font/satoshi_medium"
-                android:layout_marginHorizontal="12dp"
-                android:background="@drawable/button_bg"
-                android:layout_marginTop="18dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-
-    </ScrollView>
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
 
-</LinearLayout>
+                <ImageView
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/delete_user" />
+
+                <TextView
+                    android:fontFamily="@font/satoshi_medium"
+                    android:layout_marginHorizontal="12dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="After deleting your account , you may not able to see your orders or any other data. as we will delete all the information about you from our servers.\n\nContact Us : rp18339@gmail.com\n\nAfter entering your password you can delete your account." />
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/edPasswordDelete"
+                    android:paddingHorizontal="6dp"
+                    android:paddingBottom="2dp"
+                    android:fontFamily="@font/satoshi_medium"
+                    android:hint="Enter your password..."
+                    android:textSize="18sp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginHorizontal="12dp"
+                    android:background="@drawable/edittext_bg"
+                    android:layout_width="match_parent"
+                    android:layout_height="32dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btnDeleteMyAccount"
+                    android:text="Delete My Account"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/satoshi_medium"
+                    android:layout_marginHorizontal="12dp"
+                    android:background="@drawable/button_bg"
+                    android:layout_marginTop="18dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+        </ScrollView>
+
+
+    </LinearLayout>
+</layout>
