Added rupee sign to the total price at ProductDetailsActivity

--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -273,7 +273,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_medium"
         android:layout_marginEnd="@dimen/margin_medium"
-        android:layout_marginStart="@dimen/margin_medium"/>
+        android:layout_marginStart="@dimen/margin_medium"
+        />
 
     </FrameLayout>
 
