Removed the Price TextView from Material Spinner Item

--- a/app/src/main/res/layout/item_double_text_spinner.xml
+++ b/app/src/main/res/layout/item_double_text_spinner.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:layout_gravity="end|center_vertical"
+        android:visibility="gone"
         />
 
     <androidx.constraintlayout.utils.widget.ImageFilterView
