Changed Spinner style to normal spinners

--- a/app/src/main/res/layout/item_double_text_spinner.xml
+++ b/app/src/main/res/layout/item_double_text_spinner.xml
@@ -29,6 +29,7 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_gravity="end|center_vertical"
-        android:src="@drawable/ic_closed_dropdown"/>
+        android:src="@drawable/ic_closed_dropdown"
+        android:visibility="gone"/>
 
 </FrameLayout>
