--- a/app/src/main/res/layout/custom_spinner_layout.xml
+++ b/app/src/main/res/layout/custom_spinner_layout.xml
@@ -16,10 +16,18 @@
         />
 
 
-    <Spinner
+    <!--<Spinner
         android:layout_width="0dp"
         android:layout_height="56dp"
         android:background="@drawable/custome_spinner_item"
+        android:id="@+id/spinner"
+        android:layout_weight="3"
+        android:layout_marginVertical="4dp"
+        />-->
+
+    <Spinner
+        android:layout_width="0dp"
+        android:layout_height="56dp"
         android:id="@+id/spinner"
         android:layout_weight="3"
         android:layout_marginVertical="4dp"
